fix spacing on detail page

--- a/css/transcriptions.css
+++ b/css/transcriptions.css
@@ -635,6 +635,7 @@ p#composer
 	margin-right: 20px;
 	margin-left: 20px;
 	text-align: left;
+  margin-bottom:0px !important;
 	max-width: 40%;
 }
 
